<resources>
  <string name="app_name">Stalker</string>
  <string name="homepageFirstText">Feel safe…</string>
  <string name="homepageSecondText">Wherever you are.</string>
  <string name="login">Login</string>
  <string name="signUp">Sign up</string>
  <string name="reload">Reload</string>
  <string name="firstName">First name</string>
  <string name="lastName">Last name</string>
  <string name="birth">Birth date</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="goToSignUp">Not yet registered? Sign up</string>
  <string name="goToLogin">Already have an account? Login</string>
  <string name="backgroundImageDescription">Picture of a walking crowd</string>
  <string name="emptyEmail">Insert an email</string>
  <string name="invalidEmail">Invalid email</string>
  <string name="emptyPassword">Insert your password</string>
  <string name="invalidPassword">The password must be between 8 and 32 characters long, and must contain at least a lowercase letter, an uppercase letter, and a number</string>
  <string name="invalidPasswordConfirm">The passwords do not match</string>
  <string name="emptyField">Fill this field</string>
  <string name="logoImageDescription">Picture of Stalker logo</string>
  <string name="organizations">Organizations</string>
  <string name="connected">Connected</string>
  <string name="report">Report</string>
  <string name="connect">Connect</string>
  <string name="disconnect">Disconnect</string>
  <string name="selected">selected</string>
  <string name="cancel">Cancel</string>
  <string name="rdn">RDN</string>
  <string name="goAnonymous">Become anonymous</string>
  <string name="goAnonymousDescription">Prevent Stalker from associating your presence in monitored places with your account</string>
  <string name="wentAnonymous">Anonymous mode on</string>
  <string name="goKnown">Become known</string>
  <string name="goKnownDescription">Let Stalker associate your presence in monitored places with your account</string>
  <string name="wentKnown">Anonymous mode off</string>
  <string name="connect_to_these_organizations">Connect to these organizations</string>
  <string name="title_activity_organization">Map</string>
  <string name="ldapCredentialsTitle">LDAP Credentials</string>
</resources>
