<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:id="@+id/BackGroundImageContainer"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="400dp"
      android:contentDescription="@string/backgroundImageDescription"
      style="@style/BackGroundImageView"/>
  </LinearLayout>

  <include layout="@menu/top_bar"/>

  <TextView
    android:id="@+id/firstText"
    app:layout_constraintTop_toBottomOf="@id/topAppBar"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginStart="8dp"
    android:text="@string/homepageFirstText"
    android:textSize="24sp"
    android:textColor="@color/whiteText"
    android:textAppearance="?attr/textAppearanceHeadline6"
    />
  <TextView
    android:id="@+id/secondText"
    app:layout_constraintTop_toBottomOf="@id/firstText"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/homepageSecondText"
    android:textSize="24sp"
    android:textColor="@color/whiteText"
    android:textAppearance="?attr/textAppearanceHeadline6"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
