<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".LoginActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include layout="@layout/mainpage_structure"/>

  <TextView
    android:id="@+id/signupTitleText"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:layout_marginStart="8dp"
    android:text="@string/signup"
    android:textSize="20sp"
    android:textColor="@color/whiteText"
    android:textAppearance="?attr/textAppearanceHeadline6"
    />

  <com.google.android.material.card.MaterialCardView
    app:layout_constraintTop_toBottomOf="@id/signupTitleText"
    android:backgroundTint="@color/whiteBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <!-- Inputs -->
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="100"
          android:baselineAligned="false">
          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameEditText"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginEnd="4dp"
            app:boxStrokeColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/textOnMatCard"
            android:hint="@string/firstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:textColor="@color/textOnMatCard"
              />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameEditText"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_marginStart="4dp"
            app:boxStrokeColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/textOnMatCard"
            android:hint="@string/lastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:textColor="@color/textOnMatCard"
              />
          </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/dateEditText"
          app:layout_constraintBottom_toTopOf="@id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:boxStrokeColor="@color/colorAccent"
          android:textColorHint="@color/colorAccent"
          app:hintTextColor="@color/textOnMatCard"
          android:hint="@string/birth"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textColor="@color/textOnMatCard"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/emailEditText"
          app:layout_constraintBottom_toTopOf="@id/passwordEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:boxStrokeColor="@color/colorAccent"
          android:textColorHint="@color/colorAccent"
          app:hintTextColor="@color/textOnMatCard"
          android:hint="@string/email"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/textOnMatCard"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passwordEditText"
          app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
          android:layout_marginTop="8dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:boxStrokeColor="@color/colorAccent"
          android:textColorHint="@color/colorAccent"
          app:hintTextColor="@color/textOnMatCard"
          android:hint="@string/password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/textOnMatCard"
            />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <!-- Buttons -->
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          app:backgroundTint="@color/colorAccent"
          android:textColor="@color/whiteText"
          android:text="@string/signup"/>
      </LinearLayout>
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
