<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:textColor="@color/whiteText"
    android:id="@+id/loginTitleText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:layout_marginStart="8dp"
    android:text="@string/login"
    android:textSize="20sp"
    android:textAppearance="?attr/textAppearanceHeadline6"
    />

  <com.google.android.material.card.MaterialCardView
    android:backgroundTint="@color/whiteBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
      android:id="@+id/card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <!-- Inputs -->
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
          app:boxStrokeColor="@color/colorAccent"
          android:textColorHint="@color/colorAccent"
          app:hintTextColor="@color/textOnMatCard"
          app:layout_constraintTop_toBottomOf="@id/loginTitleText"
          app:layout_constraintBottom_toTopOf="@id/passwordEditText"
          android:id="@+id/emailEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/textOnMatCard"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          app:boxStrokeColor="@color/colorAccent"
          android:textColorHint="@color/colorAccent"
          app:hintTextColor="@color/textOnMatCard"
          app:layout_constraintTop_toBottomOf="@id/emailEditText"
          app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
          android:id="@+id/passwordEditText"
          android:layout_marginTop="8dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/textOnMatCard"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <!-- Buttons -->
      <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
          app:backgroundTint="@color/colorAccent"
          android:textColor="@color/whiteText"
          android:id="@+id/loginButton"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/login"/>
      </LinearLayout>
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>
</LinearLayout>
